Closed Bug 1319330 Opened 9 years ago Closed 9 years ago

Clang complains bad implicit conversion constructor for the header file exception of VS 2015

Categories

(Developer Infrastructure :: Source Code Analysis, defect)

Unspecified
Windows
defect
Not set
normal

Tracking

(firefox53 fixed)

RESOLVED FIXED
mozilla53
Tracking Status
firefox53 --- fixed

People

(Reporter: ting, Assigned: ehsan.akhgari)

References

Details

Attachments

(1 file)

While working on bug 1316545 I ran into this: 0:22.67 error(clang): 'error' diagnostics seen but not expected: 0:22.67 File C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\INCLUDE\exception Line 142: bad implicit conversion constructor for 'bad_exception' 0:22.67 File C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\INCLUDE\exception Line 175: bad implicit conversion constructor for 'bad_alloc' 0:22.67 error(clang): 'note' diagnostics seen but not expected: 0:22.67 File C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\INCLUDE\exception Line 142: consider adding the explicit keyword to the constructor 0:22.67 File C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\INCLUDE\exception Line 175: consider adding the explicit keyword to the constructor I workarounded it by adding "explicit" to my local file, but for taskcluster probably it requires customized built vs2015 on tooltool.
Surely there must be a way to make system headers exempt from static analysis requirements, no?
Flags: needinfo?(ehsan)
Flags: needinfo?(ehsan)
Ting-Yu, can you please test this patch?
Attachment #8813249 - Flags: review?(michael)
Attachment #8813249 - Flags: feedback?(janus926)
Assignee: nobody → ehsan
Attachment #8813249 - Flags: review?(michael) → review+
Comment on attachment 8813249 [details] [diff] [review] Ignore system headers for the implicit constructor check Yes, it works.
Attachment #8813249 - Flags: feedback?(janus926) → feedback+
Pushed by eakhgari@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/cbbb7be5fe57 Ignore system headers for the implicit constructor check; r=mystor
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
Product: Core → Firefox Build System
Product: Firefox Build System → Developer Infrastructure
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: