Bug 1319330 - Ignore system headers for the implicit constructor check; r=mystor